delete xgboost library import

--- a/3.classification-text-dnn-jpn/auto-ml-classification-text-dnn.ipynb
+++ b/3.classification-text-dnn-jpn/auto-ml-classification-text-dnn.ipynb
@@ -50,8 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install -U azureml-sdk[automl]\n",
-    "#!pip install -U xgboost"
+    "#!pip install -U azureml-sdk[automl,notebooks]"
    ]
   },
   {
@@ -94,11 +93,7 @@
     "from helper import run_inference, get_result_df\n",
     "from azureml.train.automl import AutoMLConfig\n",
     "from azureml.automl.core.featurization import FeaturizationConfig\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "import xgboost\n",
-    "import xgboost.compat\n",
-    "from xgboost.compat import XGBoostLabelEncoder"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -131,13 +126,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subscription_id = '<your subscription id>'\n",
-    "resource_group = '<your resoure name>'\n",
-    "workspace_name = '<your workspace name>'\n",
+    "subscription_id = '<your subscription_id>'\n",
+    "resource_group = '<your resource_group>'\n",
+    "workspace_name = '<your workspace_name>'\n",
     "\n",
     "ws = Workspace(subscription_id, resource_group, workspace_name)\n",
     "\n",
-    "experiment_name = 'livedoor-news-classification-jpn'\n",
+    "experiment_name = 'livedoor-news-classification'\n",
     "experiment = Experiment(ws, experiment_name)"
    ]
   },
@@ -161,7 +156,7 @@
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
     "# Choose a name for your cluster.\n",
-    "amlcompute_cluster_name = \"gpucluster\"\n",
+    "amlcompute_cluster_name = \"gpucluster6\"\n",
     "\n",
     "# Verify that cluster does not exist already\n",
     "try:\n",
@@ -170,12 +165,11 @@
     "except ComputeTargetException:\n",
     "    compute_config = AmlCompute.provisioning_configuration(vm_size = \"STANDARD_NC6S_V3\", \n",
     "                                                               # CPU for BiLSTM, such as \"STANDARD_D2_V2\" \n",
-    "                                                           # To use BERT (this is recommended for best performance), select a GPU such as \"STANDARD_NC6\" \n",
-    "                                                           # or similar GPU option\n",
-    "                                                           # available in your workspace\n",
+    "                                                           # To use BERT (this is recommended for best performance), select a GPU such as \"STANDARD_NC6S_V3\" \n",
+    "                                                           # or similar GPU option available in your workspace\n",
     "                                                           min_nodes = 0,\n",
     "                                                           max_nodes = 10,\n",
-    "                                                           vm_priority='lowpriority') ## vm_priority='lowpriority' | `dedicated'\n",
+    "                                                           vm_priority='lowpriority') ## vm_priority='lowpriority' | 'dedicated'\n",
     "    compute_target = ComputeTarget.create(ws, amlcompute_cluster_name, compute_config)\n",
     "\n",
     "compute_target.wait_for_completion(show_output=True)"
@@ -282,7 +276,7 @@
     "automl_settings = {\n",
     "    'experiment_timeout_minutes': 60,\n",
     "    'primary_metric' : 'accuracy', #'AUC_weighted', 'accuracy'\n",
-    "    'experiment_exit_score': 0.9, # NEW\n",
+    "    'experiment_exit_score': 0.95, # NEW\n",
     "    'max_concurrent_iterations': 4,\n",
     "    'max_cores_per_iteration': -1,\n",
     "    'enable_dnn': True,\n",
@@ -293,7 +287,6 @@
     "    'featurization': featurization_config,\n",
     "    'enable_voting_ensemble': False, # this cut the final ensumble job\n",
     "    'enable_stack_ensemble': False   # this cut the final ensumble job\n",
-    "#    'enable_onnx_compatible_models': True,\n",
     "#    'iterations': 2 ## mainly for DEBUG: Test purpose to stop job earlier to undestand AutoMLConfig parameters behavior or so.\n",
     "}\n",
     "\n",
@@ -344,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#RunDetails(automl_run).show()"
+    "#RunDetails(automl_run).show() --- it shows more graphical training status."
    ]
   },
   {
@@ -567,6 +560,13 @@
    "source": [
     "pd.Series(test_run.get_metrics())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -595,9 +595,9 @@
   "friendly_name": "DNN Text Featurization",
   "index_order": 2,
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -609,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   },
   "tags": [
    "None"
