fix Multi-GPU issue.

--- a/7.ImageClassification-HyperparameterTurning-PyTorchLightning/ImageClassification-hyperparameterTune-PyTorchLightning.ipynb
+++ b/7.ImageClassification-HyperparameterTurning-PyTorchLightning/ImageClassification-hyperparameterTune-PyTorchLightning.ipynb
@@ -24,7 +24,33 @@
     "## Prerequisite:\n",
     "* Understand the [architecture and terms](https://docs.microsoft.com/azure/machine-learning/service/concept-azure-machine-learning-architecture) introduced by Azure Machine Learning\n",
     "* install the AML SDK\n",
-    "* create a workspace and downlod its configuration file (`config.json`)"
+    "* create a workspace and downlod its configuration file (`config.json`)\n",
+    "\n",
+    "Reference:\n",
+    "\n",
+    "Azure Machine Learning を使用して PyTorch モデルを大規模にトレーニングする:\n",
+    "\n",
+    "    https://docs.microsoft.com/ja-jp/azure/machine-learning/how-to-train-pytorch\n",
+    "\n",
+    "Training Your First Distributed PyTorch Lightning Model with Azure ML:\n",
+    "\n",
+    "    https://medium.com/microsoftazure/training-your-first-distributed-pytorch-lightning-model-with-azure-ml-f493d370acb\n",
+    "\n",
+    "\n",
+    "FINETUNING TORCHVISION MODELS:\n",
+    "\n",
+    "    https://pytorch.org/tutorials/beginner/finetuning_torchvision_models_tutorial.html\n",
+    "\n",
+    "Split data with PyTorch Transformer:\n",
+    "\n",
+    "    https://stackoverflow.com/questions/61811946/train-valid-test-split-for-custom-dataset-using-pytorch-and-torchvision\n",
+    "\n",
+    "Multi-GPU in PyTorch Lightning:\n",
+    "\n",
+    "    https://towardsdatascience.com/9-tips-for-training-lightning-fast-neural-networks-in-pytorch-8e63a502f565\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -69,8 +95,15 @@
    "source": [
     "# check core SDK version number\n",
     "print('This code run confrimed - SDK version: 1.19.0')\n",
-    "print(\"Azure ML SDK Version: \", azureml.core.VERSION)\n",
-    "\n",
+    "print(\"Azure ML SDK Version: \", azureml.core.VERSION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "set_diagnostics_collection(send_diagnostics=True)"
    ]
   },
@@ -78,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize workspace\n",
+    "# Initialize workspace\n",
     "Initialize a [Workspace](https://docs.microsoft.com/azure/machine-learning/service/concept-azure-machine-learning-architecture#workspace) object from the existing workspace you created in the Prerequisites step. `Workspace.from_config()` creates a workspace object from the details stored in `config.json`."
    ]
   },
@@ -105,7 +138,7 @@
     }
    },
    "source": [
-    "## Connect dataset\n",
+    "# Connect dataset\n",
     "In order to train on the `cat_dogs` dataset that was created via Azure ML SDK or Portal."
    ]
   },
@@ -140,42 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calcurate Count of GPU\n",
-    "\n",
-    "This is for useful **multi GPU** senario like NC12,24 series.\n",
-    "\n",
-    "vm_size list\n",
-    "https://docs.microsoft.com/en-us/azure/virtual-machines/linux/sizes-gpu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import re\n",
-    "\n",
-    "comp_dict = compute_target.get_status().serialize()\n",
-    "vm_size = comp_dict['vmSize']\n",
-    "print(vm_size)\n",
-    "\n",
-    "def get_gpu_count(vm_size):\n",
-    "    pattern=r'\\d{1,2}'\n",
-    "    s = re.search(pattern, vm_size)\n",
-    "    gpu_count = vm_size[s.start():s.end()]\n",
-    "    return int(gpu_count) // 6\n",
-    "\n",
-    "n_gpu = get_gpu_count(vm_size)\n",
-    "print('gpu_count:' + str(n_gpu))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create an environment\n",
+    "# Create an environment\n",
     "Define a conda environment YAML file with your training script dependencies and create an Azure ML environment.\n",
     "\n",
     "Reference for-\n",
@@ -198,7 +196,8 @@
     "env.docker.enabled = True\n",
     "env.docker.base_image = (\n",
     "    \"mcr.microsoft.com/azureml/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04\"\n",
-    ")"
+    ")\n",
+    "env.docker.arguments = ['--shm-size', '2g']"
    ]
   },
   {
@@ -247,31 +246,21 @@
     "arguments = [\n",
     "    '--data-folder', dataset.as_mount(),\n",
     "    '--batch-size', 50,\n",
-    "    '--epoch', 1,\n",
+    "    '--epoch', 10,\n",
     "    '--learning-rate', 0.001,\n",
     "    '--momentum', 0.9,\n",
     "    '--model-name', 'resnet',\n",
     "    '--optimizer', 'Adagrad',\n",
     "    '--criterion', 'cross_entropy',\n",
-    "    '--gpus', n_gpu,\n",
     "    '--feature_extract', True\n",
     "]\n",
-    "\n",
-    "'''\n",
-    "        '--optimizer': choice('SGD',\n",
-    "        \n",
-    "        \n",
-    "        'Adagrad','Adadelta','Adam','AdamW','SparseAdam', 'Adamax', 'ASGD', 'LBFGS', 'RMSprop', 'Rprop'),\n",
-    "        '--criterion': choice('cross_entropy', 'binary_cross_entropy', 'binary_cross_entropy_with_logits', 'poisson_nll_loss', 'hinge_embedding_loss', 'kl_div', 'l1_loss', 'mse_loss', 'margin_ranking_loss', 'multilabel_margin_loss', 'multilabel_soft_margin_loss', 'multi_margin_loss','nll_loss', 'smooth_l1_loss', 'soft_margin_loss')\n",
-    "\n",
-    "'''\n",
     "\n",
     "config = ScriptRunConfig(\n",
     "                source_directory=script_folder,\n",
     "                script='train.py',\n",
     "                arguments=arguments,\n",
     "                compute_target=compute_target, \n",
-    "                max_run_duration_seconds=600, # 10 minutes\n",
+    "                max_run_duration_seconds=900, # 15 minutes\n",
     "                environment=env\n",
     "                )"
    ]
@@ -332,7 +321,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "outputPrepend"
+    ]
    },
    "outputs": [],
    "source": [
@@ -389,9 +380,9 @@
     "# Use Random Sampling as 1st Phase\n",
     "ps = RandomParameterSampling(\n",
     "    {\n",
-    "        '--batch-size': choice(50, 100),\n",
-    "        '--epoch': choice(1, 2),\n",
-    "        '--learning-rate': loguniform(-4, -1),\n",
+    "        '--batch-size': choice(50, 75, 100),\n",
+    "        '--epoch': choice(20, 25, 30, 40, 50, 75, 100),\n",
+    "        '--learning-rate': loguniform(-5, -1),\n",
     "        '--momentum': loguniform(-3, -1),\n",
     "        '--model-name': choice('resnet', 'alexnet', 'vgg', 'squeezenet', 'densenet', 'inception'),\n",
     "        '--optimizer': choice('SGD','Adagrad','Adadelta','Adam','AdamW','Adamax', 'ASGD', 'RMSprop', 'Rprop'),\n",
@@ -403,16 +394,15 @@
     "'''\n",
     "ps = BayesianParameterSampling(\n",
     "    {\n",
-    "        '--batch-size': choice(50, 100, 150, 200, 250, 300),\n",
-    "        '--epoch': choice(20, 25, 30, 35),\n",
+    "        '--batch-size': choice(50, 100),\n",
+    "        '--epoch': choice(25, 50, 75, 100),\n",
     "        '--learning-rate': loguniform(-4, -1),\n",
-    "        '--momentum': loguniform(-2, -1),\n",
+    "        '--momentum': loguniform(-5, -3),\n",
     "        '--model-name': choice('resnet', 'alexnet', 'vgg', 'squeezenet', 'densenet', 'inception'),\n",
     "        '--optimizer': choice('SGD','Adagrad','Adadelta','Adam','AdamW','SparseAdam', 'Adamax', 'ASGD', 'RMSprop', 'Rprop'),\n",
     "        '--criterion': choice('cross_entropy', 'binary_cross_entropy', 'binary_cross_entropy_with_logits', 'poisson_nll_loss', 'hinge_embedding_loss', 'kl_div', 'l1_loss', 'mse_loss', 'margin_ranking_loss', 'multilabel_margin_loss', 'multilabel_soft_margin_loss', 'multi_margin_loss','nll_loss', 'smooth_l1_loss', 'soft_margin_loss')\n",
     "    }\n",
     ")\n",
-    "\n",
     "'''"
    ]
   },
@@ -449,7 +439,6 @@
     "\n",
     "arguments = [\n",
     "    '--data-folder', dataset.as_mount(),\n",
-    "    '--gpus', n_gpu,\n",
     "    '--feature_extract', True\n",
     "]\n",
     "\n",
@@ -458,7 +447,7 @@
     "                script='train.py',\n",
     "                arguments=arguments,\n",
     "                compute_target=compute_target, \n",
-    "                max_run_duration_seconds=600, # 10 minutes\n",
+    "                max_run_duration_seconds=3000, # 30 minutes\n",
     "                environment=env\n",
     "                )\n",
     "\n",
@@ -467,9 +456,9 @@
     "                       policy=policy, # Comment out this line for Baysian Sampling\n",
     "                       primary_metric_name='Accuracy', \n",
     "                       primary_metric_goal=PrimaryMetricGoal.MAXIMIZE, \n",
-    "                       max_total_runs=180,\n",
+    "                       max_total_runs=200,\n",
     "                       max_concurrent_runs=4,\n",
-    "                       max_duration_minutes=20)"
+    "                       max_duration_minutes=120)"
    ]
   },
   {
@@ -512,14 +501,6 @@
    "outputs": [],
    "source": [
     "hdr.wait_for_completion(show_output=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Find and register best model\n",
-    "When all the jobs finish, we can find out the one that has the highest accuracy."
    ]
   },
   {
