--- a/3.classification-text-dnn-jpn/auto-ml-classification-text-dnn.ipynb
+++ b/3.classification-text-dnn-jpn/auto-ml-classification-text-dnn.ipynb
@@ -45,24 +45,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install -U azureml-sdk[automl,notebooks]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip freeze"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"This notebook was created using version 1.7.0 of the Azure ML SDK\")\n",
+    "print(\"This notebook was created using version 1.34.0 of the Azure ML SDK\")\n",
     "print(\"You are currently using version\", azureml.core.VERSION, \"of the Azure ML SDK\")"
    ]
   },
@@ -156,16 +138,16 @@
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
     "# Choose a name for your cluster.\n",
-    "amlcompute_cluster_name = \"gpucluster6\"\n",
+    "amlcompute_cluster_name = \"gpucluster24\"\n",
     "\n",
     "# Verify that cluster does not exist already\n",
     "try:\n",
     "    compute_target = ComputeTarget(workspace=ws, name=amlcompute_cluster_name)\n",
     "    print('Found existing cluster, use it.')\n",
     "except ComputeTargetException:\n",
-    "    compute_config = AmlCompute.provisioning_configuration(vm_size = \"STANDARD_NC6S_V3\", \n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size = \"STANDARD_NC24rs_V3\", \n",
     "                                                               # CPU for BiLSTM, such as \"STANDARD_D2_V2\" \n",
-    "                                                           # To use BERT (this is recommended for best performance), select a GPU such as \"STANDARD_NC6S_V3\" \n",
+    "                                                           # To use BERT (this is recommended for best performance), select a GPU such as \"STANDARD_NC24rs_V3\" \n",
     "                                                           # or similar GPU option available in your workspace\n",
     "                                                           min_nodes = 0,\n",
     "                                                           max_nodes = 10,\n",
@@ -195,15 +177,17 @@
     "target_column_name = 'label'\n",
     "df = Dataset.get_by_name(ws, name='livedoor-news')\n",
     "df = df.to_pandas_dataframe()\n",
+    "df.drop(labels=['url', 'date'], axis=1, inplace=True)\n",
     "\n",
     "data_train, data_test = train_test_split(df, test_size=0.25, random_state=0)\n",
     "\n",
     "# Only checking the loaded dataset\n",
-    "print ('train:')\n",
+    "print ('** train - columns:')\n",
     "print (data_train.columns)\n",
     "'''\n",
+    "print ('** train - dataset:')\n",
     "print (data_train)\n",
-    "print ('test:')\n",
+    "print ('** test - dataset:')\n",
     "print (data_test)\n",
     "'''"
    ]
@@ -260,6 +244,7 @@
     "Reference this page [実験の設定を構成する](https://docs.microsoft.com/ja-jp/azure/machine-learning/how-to-configure-auto-train#configure-your-experiment-settings) for Configration detail. \n",
     "\n",
     "blocking_model name: [azureml.train.automl.constants.SupportedModels.Classification](https://docs.microsoft.com/en-us/python/api/azureml-train-automl-client/azureml.train.automl.constants.supportedmodels.classification?view=azure-ml-py)\n",
+    "\n",
     "SupportedTranformers name is here: [SupportedTransformers](https://docs.microsoft.com/en-us/python/api/azureml-automl-core/azureml.automl.core.constants.supportedtransformers?view=azure-ml-py)"
    ]
   },
@@ -271,18 +256,17 @@
    "source": [
     "featurization_config = FeaturizationConfig(dataset_language='jpn')\n",
     "#featurization_config.blocked_transformers = ['TfIdf','CountVectorizer']\n",
-    "#featurization_config.add_drop_columns(['url'])\n",
     "\n",
     "automl_settings = {\n",
     "    'experiment_timeout_minutes': 60,\n",
-    "    'primary_metric' : 'accuracy', #'AUC_weighted', 'accuracy'\n",
-    "    'experiment_exit_score': 0.95, # NEW\n",
+    "    'primary_metric' : 'AUC_weighted', #'AUC_weighted', 'accuracy'\n",
+    "    'experiment_exit_score': 0.9,\n",
     "    'max_concurrent_iterations': 4,\n",
     "    'max_cores_per_iteration': -1,\n",
     "    'enable_dnn': True,\n",
     "    'enable_early_stopping': True,\n",
     "    'force_text_dnn': True, # enable BERT featurization\n",
-    "    'validation_size': 0.2,\n",
+    "    'validation_size': 0.15,\n",
     "    'verbosity': logging.INFO,\n",
     "    'featurization': featurization_config,\n",
     "    'enable_voting_ensemble': False, # this cut the final ensumble job\n",
@@ -594,9 +578,11 @@
   ],
   "friendly_name": "DNN Text Featurization",
   "index_order": 2,
+  "interpreter": {
+   "hash": "63fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.6 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -609,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.6"
   },
   "tags": [
    "None"
